新增問答模塊

--- a/pom.xml
+++ b/pom.xml
@@ -105,5 +105,6 @@
 		<module>ten_common</module>
 		<module>ten_base</module>
     <module>ten_recruit</module>
+    <module>ten_qa</module>
   </modules>
 </project>
