--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
- 
+		<dependency>
+ 		<groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-data-redis</artifactId>
+        <scope>runtime</scope>
+        </dependency>
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
@@ -45,9 +49,15 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
-		</dependency>
+		</dependency>		
+		
+		<dependency>
+    <groupId>org.apache.commons</groupId>
+    <artifactId>commons-pool2</artifactId>
+    <version>2.4.3</version>
+</dependency>
 	</dependencies>
-	
+
 	<repositories>
         <repository>
             <id>spring-snapshots</id>
@@ -106,5 +116,6 @@
 		<module>ten_base</module>
     <module>ten_recruit</module>
     <module>ten_qa</module>
-  </modules>
+    <module>ten_article</module>
+	</modules>
 </project>
