--- a/ten_gathering/src/resources/application.properties
+++ b/ten_gathering/src/resources/application.properties
@@ -1,8 +1,11 @@
-server.port=9005
+server.port=9006
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://192.168.1.19:3306/tensquare_gathering?characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/tensquare_gathering?characterEncoding=utf8
 spring.datasource.username=root
 spring.datasource.password=root
-spring.jpa.database=MySQL
-spring.jpa.show‐sql=true
-spring.jpa.generate‐ddl=true
+spring.jpa.database=MYSQL
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+Spring.redis.host=127.0.0.1
+spring.redis.database=1
+spring.redis.port=6379
