--- a/ten_qa/src/resources/application.properties
+++ b/ten_qa/src/resources/application.properties
@@ -1,8 +1,9 @@
 server.port=9003
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://192.168.1.19:3306/tensquare_qa?characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/tensquare_qa?characterEncoding=utf-8
 spring.datasource.username=root
 spring.datasource.password=root
-spring.jpa.database=MySQL
-spring.jpa.show‐sql=true
-spring.jpa.generate‐ddl=true
+spring.jpa.database=MYSQL
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+
