--- a/pom.xml
+++ b/pom.xml
@@ -34,11 +34,15 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+		 <dependency> 
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-data-mongodb</artifactId>
+    </dependency> 
 		<dependency>
  		<groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-data-redis</artifactId>
         <scope>runtime</scope>
-        </dependency>
+        </dependency> 
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
@@ -118,5 +122,6 @@
     <module>ten_qa</module>
     <module>ten_article</module>
     <module>ten_gathering</module>
-	</modules>
+       <module>ten_spit</module>
+  </modules>
 </project>
