--- a/ten_article/src/resources/application.properties
+++ b/ten_article/src/resources/application.properties
@@ -9,4 +9,6 @@ spring.jpa.generate-ddl=true
 Spring.redis.host=127.0.0.1
 spring.redis.database=1
 spring.redis.port=6379
-
+spring.data.mongodb.host=127.0.0.1
+spring.data.mongodb.database=spitdb
+spring.data.mongodb.port=27017
